﻿shmuel 19.07.2014 20:47:27 +0200 - build 402

1. LuaFAR: функция editor.ClearSessionBookmarks возвращает булевое значение, а не число.

shmuel 18.07.2014 07:46:24 +0200 - build 401

1. LuaFAR: функции editor.GetBookmarks и editor.GetSessionBookmarks неправильно работали и вызывали падение.

shmuel 17.07.2014 16:38:07 +0200 - build 400

1. LuaFAR: функции panel.* не работали с хэндлами панелей, полученными от panel.GetPanelInfo().

shmuel 16.07.2014 18:28:05 +0200 - build 399

1. Новая функция: mf.acall. Подробности - в мануале.

shmuel 15.07.2014 00:22:49 +0200 - build 398

1. Мелкий рефакторинг.

shmuel 14.07.2014 21:01:59 +0200 - build 397

1. Игнорируем неправильные команды от вызовов Plugin.Command().

shmuel 08.07.2014 16:11:57 +0200 - build 396

1. Уточнение 389.2 : была ошибка при запуске Far /w /e <filename>.

shmuel 07.07.2014 15:48:17 +0200 - build 395

1. Уточнение 389.2 : ошибка при исполнении функции text() одного пункта меню
   приводила к тому, что и остальные пункты меню плагина не загружались.

shmuel 07.07.2014 00:08:44 +0200 - build 394

1. Уточнение 389.2 : поле "area" сделано опциональным.

shmuel 06.07.2014 13:00:38 +0200 - build 393

1. Уточнение 389.2 : поле "title" переименовано в "text".

shmuel 05.07.2014 22:37:25 +0200 - build 392

1. Мелкий рефакторинг.

shmuel 05.07.2014 22:27:12 +0200 - build 391

1. Уточнение 389.2.

shmuel 05.07.2014 17:29:40 +0200 - build 390

1. Уточнение 389.2.

shmuel 05.07.2014 16:58:08 +0200 - build 389

1. Продолжение 387.2.

2. Добавление пунктов в меню плагинов/дисков/конфигурации плагинов из макрофайлов. Подробности - в мануале.

shmuel 03.07.2014 12:38:39 +0200 - build 388

1. LuaFAR (generic plugin): защита от вызовов Фаром экспортируемых функций плагина, производимых
   до возвращения из SetStartupInfoW(), то-есть когда плагин ещё не полностью инициализирован.

shmuel 01.07.2014 00:02:47 +0200 - build 387

1. Откат 383-386.
